--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,46 +1,66 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<section class="flex justify-center items-center py-52">
-		<div class="min-w-xl flex flex-col justify-center items-center gap-24">
-			<div class="w-full text-2xl md:text-4xl flex justify-between">
-				<span>TRAINING</span>
-				<span>INTERVIEWS</span>
-				<span>JOBS</span>
+	<section class="flex justify-center items-center py-36 md:py-52">
+		<div class="w-full max-w-3xl flex flex-col justify-center items-center gap-16 md:gap-24">
+			<div class="w-full text-4xl flex flex-wrap justify-center gap-6 md:gap-2 md:justify-between px-2">
+				<span class="w-full md:w-fit">TRAINING</span>
+				<span class="w-full md:w-fit" >INTERVIEWS</span>
+				<span class="w-full md:w-fit" >JOBS</span>
 			</div>
-
-			<a
-				href="https://play.google.com/store/apps/details?id=com.skill.my&pcampaignid=web_share"
-				target="_blank"
-				class="bg-black rounded-xl px-4 py-2 flex justify-center items-center gap-2 w-fit text-white border-2 hover:border-violet-500 transition duration-300"
-			>
-				<svg
-					width="44"
-					height="47"
-					viewBox="0 0 24 27"
-					fill="none"
-					xmlns="http://www.w3.org/2000/svg"
+			<div class="w-full flex justify-evenly">
+				<a
+					href="https://play.google.com/store/apps/details?id=com.skill.my&pcampaignid=web_share"
+					target="_blank"
+					class="bg-black rounded-xl px-4 py-2 grid grid-cols-4 justify-center items-center gap-2 w-fit text-white border-2 hover:border-violet-500 transition duration-300"
 				>
-					<path
-						d="M9.80482 11.4617L0.0895996 22.0059C0.0905121 22.0078 0.090512 22.0106 0.0914244 22.0125C0.389807 23.1574 1.41179 24 2.62539 24C3.11083 24 3.56616 23.8656 3.95671 23.6305L3.98773 23.6118L14.9229 17.1593L9.80482 11.4617Z"
-						fill="#EA4335"></path>
-					<path
-						d="M19.6331 9.66619L19.624 9.65966L14.9028 6.86123L9.58392 11.7013L14.9219 17.1582L19.6176 14.3878C20.4406 13.9324 21 13.045 21 12.0223C21 11.0052 20.4489 10.1225 19.6331 9.66619Z"
-						fill="#FBBC04"></path>
-					<path
-						d="M0.0894234 1.99331C0.0310244 2.21353 0 2.44494 0 2.68382V21.3163C0 21.5552 0.0310245 21.7866 0.0903359 22.0059L10.1386 11.7313L0.0894234 1.99331Z"
-						fill="#4285F4"></path>
-					<path
-						d="M9.87657 11.9999L14.9044 6.85935L3.98192 0.383507C3.58499 0.139962 3.12145 -4.76837e-06 2.62597 -4.76837e-06C1.41237 -4.76837e-06 0.388558 0.844468 0.0901759 1.99034C0.0901759 1.99127 0.0892639 1.9922 0.0892639 1.99314L9.87657 11.9999Z"
-						fill="#34A853"></path>
-				</svg>
-				<p class="text-3xl">Get it on Google Play</p>
-			</a>
+					<svg
+						width="44"
+						height="47"
+						viewBox="0 0 24 27"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+					>
+						<path
+							d="M9.80482 11.4617L0.0895996 22.0059C0.0905121 22.0078 0.090512 22.0106 0.0914244 22.0125C0.389807 23.1574 1.41179 24 2.62539 24C3.11083 24 3.56616 23.8656 3.95671 23.6305L3.98773 23.6118L14.9229 17.1593L9.80482 11.4617Z"
+							fill="#EA4335"></path>
+						<path
+							d="M19.6331 9.66619L19.624 9.65966L14.9028 6.86123L9.58392 11.7013L14.9219 17.1582L19.6176 14.3878C20.4406 13.9324 21 13.045 21 12.0223C21 11.0052 20.4489 10.1225 19.6331 9.66619Z"
+							fill="#FBBC04"></path>
+						<path
+							d="M0.0894234 1.99331C0.0310244 2.21353 0 2.44494 0 2.68382V21.3163C0 21.5552 0.0310245 21.7866 0.0903359 22.0059L10.1386 11.7313L0.0894234 1.99331Z"
+							fill="#4285F4"></path>
+						<path
+							d="M9.87657 11.9999L14.9044 6.85935L3.98192 0.383507C3.58499 0.139962 3.12145 -4.76837e-06 2.62597 -4.76837e-06C1.41237 -4.76837e-06 0.388558 0.844468 0.0901759 1.99034C0.0901759 1.99127 0.0892639 1.9922 0.0892639 1.99314L9.87657 11.9999Z"
+							fill="#34A853"></path>
+					</svg>
+					<p class="col-span-3 text-[1.3rem] md:text-3xl">Get it on Google Play</p>
+				</a>
+
+				<!-- <div
+					class="bg-black rounded-xl px-4 py-2 grid grid-cols-4 justify-center items-center gap-2 w-full text-white border-2"
+				>
+					<svg
+						width="44"
+						height="47"
+						viewBox="0 0 24 27"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+					>
+						<path
+							d="M16.7045 12.7631C16.7166 11.8432 16.9669 10.9413 17.4321 10.1412C17.8972 9.34108 18.5621 8.66885 19.3648 8.18702C18.8548 7.47597 18.1821 6.89081 17.4 6.478C16.6178 6.0652 15.7479 5.83613 14.8592 5.80898C12.9635 5.61471 11.1258 6.91644 10.1598 6.91644C9.17506 6.91644 7.68776 5.82827 6.08616 5.86044C5.05021 5.89311 4.04059 6.18722 3.15568 6.7141C2.27077 7.24099 1.54075 7.98268 1.03674 8.86691C-1.14648 12.5573 0.482005 17.9809 2.57338 20.964C3.61975 22.4247 4.84264 24.0564 6.44279 23.9985C8.00863 23.9351 8.59344 23.0237 10.4835 23.0237C12.3561 23.0237 12.9048 23.9985 14.5374 23.9617C16.2176 23.9351 17.2762 22.4945 18.2859 21.02C19.0377 19.9792 19.6162 18.8288 20 17.6116C19.0238 17.2085 18.1908 16.5338 17.6048 15.6716C17.0187 14.8094 16.7056 13.7979 16.7045 12.7631Z"
+							fill="white"></path>
+						<path
+							d="M13.6208 3.84713C14.5369 2.77343 14.9883 1.39335 14.879 0C13.4794 0.143519 12.1865 0.796596 11.258 1.82911C10.804 2.33351 10.4563 2.92033 10.2348 3.55601C10.0132 4.19168 9.92221 4.86375 9.96687 5.5338C10.6669 5.54084 11.3595 5.3927 11.9924 5.10054C12.6254 4.80838 13.1821 4.37982 13.6208 3.84713Z"
+							fill="white"></path>
+					</svg>
+
+					<p class="col-span-3 text-3xl">Coming Soon</p>
+				</div> -->
+			</div>
 		</div>
 	</section>
 </Layout>
