--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import "../styles/global.css";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>MISKILLS</title>
 	</head>
 	<body>
 		<div>
@@ -21,9 +21,9 @@ import "../styles/global.css";
 				alt=""
 				fetchpriority="high"
 				<main
-				class="w-full border border-black min-h-screen px-10"
+				class="w-full min-h-screen"
 			/>
-			<main class="w-full border border-black min-h-screen px-10 flex flex-col">
+			<main class="w-full border border-black min-h-screen px-6 md:px-10 flex flex-col">
 				<Header />
 				<slot />
 			</main>
