--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,11 @@ import Layout from "../layouts/Layout.astro";
 				<span class="w-full md:w-fit" >JOBS</span>
 			</div>
 			<div class="w-full flex justify-evenly">
+
 				<a
 					href="https://play.google.com/store/apps/details?id=com.skill.my&pcampaignid=web_share"
 					target="_blank"
-					class="bg-black rounded-xl px-4 py-2 grid grid-cols-4 justify-center items-center gap-2 w-fit text-white border-2 hover:border-violet-500 transition duration-300"
+					class="bg-black rounded-xl px-4 py-2 flex justify-center items-center gap-2 w-full md:w-fit text-white border-2 hover:border-violet-500 transition duration-300"
 				>
 					<svg
 						width="44"
