--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -9,13 +9,13 @@ import Layout from "../layouts/Layout.astro";
 
         <div class="section">
             <h2>Support Email</h2>
-            <p><strong>support@miskills.com</strong></p>
+            <p><strong>miskills.india@gmail.com</strong></p>
         </div>
 
-        <div class="section">
-            <h2>Business Queries</h2>
-            <p><strong>contact@miskills.com</strong></p>
-        </div>
+        <!--<div class="section">-->
+        <!--    <h2>Business Queries</h2>-->
+        <!--    <p><strong>contact@miskills.com</strong></p>-->
+        <!--</div>-->
 
         <!--<div class="section">-->
         <!--    <h2>Office Address</h2>-->
