--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -71,8 +71,10 @@ import logo from "../../assets/logo.png";
                     </a>
                 </ul>
             </li>
+            <li><a href="/plans">Plans</a></li>
 
             <li><a href="/contact-us">Contact Us</a></li>
+
         </ul>
     </div>
 </nav>
